--- a/karna.css
+++ b/karna.css
@@ -5,7 +5,7 @@ body{
   text-align: center;
   margin: 0;
   padding:0;
-  min-height: 100vh
+  min-height: 100vh;
   position:relative;
 }
 footer{
